--- a/src/templates/translators.html
+++ b/src/templates/translators.html
@@ -15,8 +15,8 @@
     </div>
 </div>
 <div class="scrollable">
-	<div class="scrollable-header">
-		<div class="section section-condensed" id="filter">
+    <div class="scrollable-header">
+        <div class="section section-condensed" id="filter">
             <div class="btn-group justified">
                 <label class="btn">
                     <input type="radio" name="filter" class="hide" ng-model="filter.name" value="language">语言<i class="kk kk-icon" ng-class="{'kk-check':choosen.languages.length == 2}"></i></label>
@@ -25,19 +25,25 @@
                 <label class="btn">
                     <input type="radio" name="filter" class="hide" ng-model="filter.name" value="price">价格<i class="kk kk-icon" ng-class="{'kk-check':choosen.price.range != ''}"></i></label>
                 <label class="btn">
-                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="category">类型<i class="kk kk-icon" ng-class="{'kk-check':choosen.category != ''}"></i></label>
+                    <input type="radio" name="filter" class="hide" ng-model="filter.name" value="category">类型<i class="kk kk-icon" ng-class="{'kk-check':choosen.category.name != ''}"></i></label>
             </div>
         </div>
-	</div>
-	<div class="scrollable-content">
-		<a ng-href="#/translators/translator_id" class="translator" ng-repeat="translator in translators track by $index">
-			<imageview data-rate="750/422" src="translator.image"></imageview>
-			<span class="translator-intro">
-				<span class="h3 block">刘畅Leila</span>
-				<span class="block">英文/泰文/中文</span>
-				<span class="block">长居住地：曼谷</span>
-				<span class="block text-ellipsis">一句话简介</span>
-			</span>
-		</a>		
-	</div>
+    </div>
+    <div class="scrollable-content">
+        <a ng-href="#/translators/{{translator.user_id}}" class="translator" ng-repeat="translator in translators track by $index">
+            <imageview data-rate="750/422" src="translator.image"></imageview>
+            <span class="translator-intro">
+                <span class="h3 block">{{translator.nickname}}</span>
+            <span class="block">{{translator.return_language}}</span>
+            <span class="block">长期居住地：{{translator.address}}</span>
+            <span class="block text-ellipsis">{{translator.introduction}}</span>
+            </span>
+        </a>
+        <div class="section text-center m" ng-click="loadMore()">{{page.message}}</div>
+        <!-- hide content -->
+        <div ng-include="'language.html'" ng-if="filter.name == 'language'"></div>
+        <div ng-include="'location.html'" ng-if="filter.name == 'location'"></div>
+        <div ng-include="'price.html'" ng-if="filter.name == 'price'"></div>
+        <div ng-include="'category.html'" ng-if="filter.name == 'category'"></div>
+    </div>
 </div>
